# django-arctic

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  arctic-orca.sublime-workspace  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
arctic/: __init__.py  apps.py  defaults.py  filters.py  forms.py  generics.py  loading.py  mixins.py  models.py  multiform.py  paginator.py  signals.py  urls.py  utils.py  views.py  widgets.py
arctic/migrations/: 0001_initial.py  0002_auto_20180618_1045.py
arctic/project_template/: manage.py  manage.py-tpl
arctic/templates/: 403.html
arctic/templatetags/: arctic_pagination_tags.py  arctic_tags.py
arctic/tests/: test_mixins.py  test_models.py  test_settings.py  test_utils.py
arctic/users/: forms.py  urls.py  views.py
docs/: authentication.html  authentication.md  forms.md  frontend.md  index.md  lists.md  reference.md
example/: Dockerfile  docker-compose.yml  requirements.txt
example/articles/: apps.py  forms.py  inlines.py  models.py  urls.py  views.py
example/companies/: apps.py  models.py  views.py
example/config/: arctic.py  settings.py  urls.py  wsgi.py
example/countries/: apps.py  countries.json  views.py
example/dashboard/: apps.py  views.py
example/example/: arctic.py  roles.py  settings.py  urls.py
example/fixtures/: demo_data.json
example/images/: apps.py  models.py
example/requirements/: requirements.txt
example/tests/: test_cms.py  test_login.py
example/users/: views.py
requirements/: base.txt  dev.txt  test.txt
tests/: conftest.py  factories.py  settings.py  test_articles.py  test_cms.py  test_empty_login_url.py  test_field_classes.py  test_forms.py  test_layout_mixin.py  test_utils.py  test_virtual_fields.py
tests/test_commands/: test_create_app_command.py  test_start_command.py
(+220 files in other folders)
