[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[pytest]
DJANGO_SETTINGS_MODULE = example.settings
norecursedirs = static
addopts = --cov=. --ignore=.tox --ignore=requirements/test.txt
python_paths = example

[isort]
line_length = 79
force_grid_wrap = true
multi_line_output = 0
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = migrations,static,setup.py

[flake8]
max-line-length = 79
max-complexity = 14
ignore = I100,D100,D101,D102,D103,D105,D200,D204,D205,D400,D401
exclude = migrations,static,settings.py
