[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[tool:pytest]
DJANGO_SETTINGS_MODULE = config.settings
norecursedirs = static
addopts = --cov=. --ignore=.tox --ignore=requirements/test.txt --ignore=build
python_paths = example

[isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = migrations,static,setup.py,project_template

[flake8]
max-line-length = 79
max-complexity = 12
ignore = E203,E266,E501,W503,E741
select = B,C,E,F,W,T4,B9
exclude = migrations,static,settings.py,project_template
